# quadratic_equation_cxx

./: .clang_format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.cpp  quadratic_equation.cpp  quadratic_equation.hpp
test/: quadratic_equation_test.cpp
